@@ -1,3 +1,8 @@
+2015-04-28  Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/NSDateFormatter.m: Properly reinstall the user provided
+	date format when we need to recreate the icu-based date formatter.
+
 2015-04-02  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSThread.m: If an exception occurs while performing a
